Fix for weird font rendering issue on mobile devices.

--- a/src/client/pages/Page/Page.scss
+++ b/src/client/pages/Page/Page.scss
@@ -8,6 +8,7 @@
 }
 
 .page-content {
-  width: $content-width + px;
+  width: 90%;
+  max-width: $content-width + px;
 }
 
